removed fixed position for footer to prevent it from covering the main page

--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,5 @@ header {
     border: 1px solid black;
 
     width: 100%;
-    margin-top: 1px; /* Adjust this value as needed */
     color: white;
 }
